--- a/src/components/Dashboard/card_one.css
+++ b/src/components/Dashboard/card_one.css
@@ -19,7 +19,7 @@
 .container1 .box2{
   position: relative;
   justify-content: center;
-  /* background-color: grey; */
+  background-color: grey;
   top: 10%;
   width: 90%;
   margin-left: 5%;
@@ -46,16 +46,18 @@
   text-align: center;
   border: 3px solid white;
 }
-/* button to take attendance */
+/* buttons*/
 .btn2{
+  display: inline-block;
   background-color: black;
   color: white;
   border-color: white;
   font-size: large;
   border-radius: 5px;
   padding: 15px;
-  
+  margin-right: 30px;
 }
+
 
 
 /* TEST TIME TABLE CSS */
